CHANGES


2015-09-26 (nb)

Added new functions and definitions. Updated testing app. Other small fixes.

- Added macro definitions for new ssd1306_char, ssd1306_string, ssd1306_numdec, ssd1306_numdecp functions.
- Added new ssd1306_fillp, ssd1306_fill functions.
- Removed old and unused code.
- Updated and improved testing app.
- Fixes in texts and comments.


2015-01-17 (nb)

Added support for printing decimal numbers.

- Added support for printing decimal numbers with the "num2str" library. New functions: ssd1306_numdec_font6x8, ssd1306_numdecp_font6x8.
- Minor updates in the text files.


2015-01-13 (nb)

Updated README file - added folders and files layout.


2015-01-12 (nb)

Added MIT License info, added LICENSE.txt file. Added licensing info to the source code file.


2015-01-12 (nb)

Updated RESEARCH and TODO files.


2015-01-10 (nb)

Fixed and improved initialization. New and improved printing of text. Updated texts.

- Fixed initialization commands.
- Implemented ssd1306_init more efficiently.
- New functions ssd1306_send_command_start, ssd1306_send_command_stop.
- Improved ssd1306_setpos, more efficient.
- Reimplemented function ssd1306_char_f6x8 as improved ssd1306_char_font6x8 printing single characters only, added new ssd1306_string_font6x8 for printing strings.
- The font8x16 functions and data moved to another file until properly implemented.
- Added to the Make file ssd1306xled8x16 file.
- Updated testing text displayed on the screen.


2015-01-10 (nb)

Changed default pins for display, now PB0=SCL and PB1=SDA. Source code reformatting, improvements, edited comments.

- Changed default pins for connecting to the display for consistency with the built-in TWI interface, they are now PB0=SCL and PB1=SDA.
- Source code, removed redundant initializations of variables.
- Source code reformatting, edited comments.


2015-01-10 (nb)

Fixed some warnings, variables renamed. The font16x16/Chinese stuff moved to other folders.
