@@ -1,18 +1,20 @@
-/*
+/**
  * SSD1306xLED - Drivers for SSD1306 controlled dot matrix OLED/PLED 128x64 displays
  *
  * @created: 2014-08-12
  * @author: Neven Boyanov
  *
- * Copyright (c) 2015 Neven Boyanov, Tinusaur Team. All Rights Reserved.
+ * This is part of the Tinusaur/SSD1306xLED project.
+ *
+ * Copyright (c) 2016 Neven Boyanov, Tinusaur Team. All Rights Reserved.
  * Distributed as open source software under MIT License, see LICENSE.txt file.
- * Please, as a favour, retain the link http://tinusaur.org to The Tinusaur Project.
+ * Please, as a favor, retain the link http://tinusaur.org to The Tinusaur Project.
  *
  * Source code available at: https://bitbucket.org/tinusaur/ssd1306xled
  *
  */
 
-// ----------------------------------------------------------------------------
+// ============================================================================
 
 #include <avr/pgmspace.h>
 
@@ -114,4 +116,4 @@ const uint8_t ssd1306xled_font6x8 [] PROGMEM = {
   0x14, 0x14, 0x14, 0x14, 0x14, 0x14, // horiz lines
 };
 
-// ----------------------------------------------------------------------------
+// ============================================================================
